2015-02-15  Benno Schulenberg  <bensberg@justemail.net>
	* src/file.c (do_lockfile): Also show the name of the affected file
	when finding a lock file, for when many files are opened at once.

2015-02-09  Chris Allegretta <chrisa@asty.org>
	* nano.spec.in: Add dependency on texinfo, docdir files for
	RPM file creation.

GNU nano 2.3.99pre2 - 2015.02.06
2015-02-03  Alex Henrie  <alexhenrie24@gmail.com>
	* src/cut.c (do_cut_text): Make sure to set modified even when
	using --enable-tiny.

2015-02-01  Kamil Dudka  <kdudka@redhat.com>
	* src/files.c (write_lockfile): Avoid writing uninitialized bytes to
	the lock file -- a simple null_at() would not initialize the buffer.
	* src/files.c (do_lockfile): Make sure that 'lockprog' and 'lockuser'
	are terminated -- strncpy() does not guarantee that on its own.
	* src/files.c (do_lockfile): Avoid printing a wrong PID on the status
	bar due to treating serialized PID bytes as signed integers.  This
	addresses https://bugzilla.redhat.com/1186384 reported by Don Swaner.
	* src/files.c (write_lockfile): Do not trim the nano version number
	-- snprintf() counts the trailing zero into the size limit.

2015-02-01  Benno Schulenberg  <bensberg@justemail.net>
	* src/winio.c (do_credits): Add a general entry for all translators.
	* src/nano.c (version), src/winio.c (do_credits): Update the copyright
	years to include 2015.

2015-01-13  Chris Allegretta <chrisa@asty.org>
	* src/files.c (open_buffer): Check here for locking and properly
	handle choosing to not open a file when locked instead of in
	open_file().  Fixes Savannah bug 42373 reported by Benno Schulenberg

GNU nano 2.3.99pre1 - 2015.01.06
2015-01-03  Chris Allegretta <chrisa@asty.org>
	* New formatter code to support syntaxes like
	go which have tools to automatically lint and reformat the text for
	you (gofmt), which is lovely.  rcfile option formatter, function
	text.c:do_formatter() and some other calls.

2014-12-28  Benno Schulenberg  <bensberg@justemail.net>